<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity">

    <TextView
        android:id="@+id/ExerciseNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/exercise_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/ExerciseTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:text="@string/timer"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/AcceleroMeterSensorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ExerciseNameText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="186dp"
        android:text="@string/accelerometer_sensor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17" />

    <TextView
        android:id="@+id/valueOfX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AcceleroMeterSensorText"
        android:layout_marginStart="36dp"
        android:layout_marginTop="27dp"
        android:text="@string/value_x"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/valueOfY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valueOfX"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/value_y"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/valueOfZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valueOfY"
        android:layout_marginStart="36dp"
        android:layout_marginTop="21dp"
        android:text="@string/value_z"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/valueNumOfX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valueOfX"
        android:layout_marginStart="180dp"
        android:layout_marginTop="-31dp"
        android:text="@string/value_Number_0"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/valueNumOfY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valueOfY"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-27dp"
        android:layout_marginEnd="222dp"
        android:text="@string/value_Number_0"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/valueNumOfZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valueOfZ"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-24dp"
        android:layout_marginEnd="219dp"
        android:text="@string/value_Number_0"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valueOfZ"
        android:layout_marginStart="52dp"
        android:layout_marginTop="95dp"
        android:text="@string/start"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/submitExerciseDataBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/startBtn"
        android:layout_alignBottom="@+id/startBtn"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="-3dp"
        android:text="@string/submit"
        android:textAllCaps="false" />

</RelativeLayout>