<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/valueOfSpeedMPSTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:text="@string/value_of_speed_meter_per_sec"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/valueOfSpeedKMPHTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:text="@string/value_of_speed_kilometer_per_sec"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:text="@string/acceleration_data"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/start_btn_txt" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stop_btn_txt" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/headingRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/valueOfXTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="X"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/valueOfYTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Y"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/valueOfZTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Z"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/country_table"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>